1998-11-28  Yo Ric Dude  <ricdude@ix.netcom.com>

	* Makefile.am, esdfile.c, esd.h: added convenient audiofile
	wrappers for playing and caching audio file data. 
	* esd.h, esdlib.c: const clean up.
	* esdmgr.c: added name to print info functions.
	* esdplay.c, esdsample.c: updated to use audiofile wrappers.
	NOTE: this means that the AUDIOFILE library is now REQUIRED for
	proper compilation of esound.  configure.in will be updated soon.
	
Mon Nov 23 06:34:43 PST 1998 Manish Singh <yosh@gimp.org>

	* configure.in: allow manual enable/disabling of alsa support

1998-10-21 Bertrand Guiheneuf <Bertrand.Guiheneuf@inria.fr>

        * use the audiofile.m4 macro to detect libaudiofile

1998-11-09  Yo Ric Dude  <ricdude@ix.netcom.com>

	* clients.c, esdlib.c, filter.c, mix.c, players.c, proto.c
	samples.c: use the freshly updated debugging macros

	* esd-server.h, esd.h, esdctl.c, esdlib.c, esdmgr.c, mix.c,
	players.c, proto.c, samples.c: initial support for setting stereo
	panning of streams and samples, just need to update mix.c to do
	the scaling...

Sat Nov  7 05:28:03 PST 1998 Manish Singh <yosh@gimp.org>

	* esddsp.c: Hmmph. The ES1370 driver blocks on open unless
	O_NONBLOCK is set explictly. So now we strcmp always, and
	set O_NONBLOCK on fallback only for the sound device.

	* esdlib.c: removed fsync's here too

1998-11-06  Yo Ric Dude  <ricdude@ix.netcom.com>

	* samples.c, players.c, proto.c: fixed rounding to multiple of 4
	algorithm, and removed fsync's as they don't do anything for a
	socket.  patches suggested by Miodrag Vallat.

1998-11-05  Yo Ric Dude  <ricdude@ix.netcom.com>

	* audio_aix.c: typo fixes courtest of Philippe Defert

1998-11-04  Yo Ric Dude  <ricdude@ix.netcom.com>

	* TODO, esd.h, esdctl.c, esdmgr.c, proto.c: It really should have
 	been esd_free_all_info(), and while we're at it, make it do
 	something potentially useful.
  	
	* esound.spec: set it up for autoconf to update the version